// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Page should load tasks from storage on mount 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#dce1de",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingBottom": 5,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 5,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#49a078",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 60,
          "paddingTop": 0,
          "position": "relative",
          "width": "100%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontSize": 24,
            "fontWeight": "700",
          },
        ]
      }
    >
      doIt
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "bottom": 10,
          "opacity": 1,
          "position": "absolute",
          "right": 10,
        }
      }
      testID="header-stats-button"
    >
      <Icon
        color="#fff"
        name="bar-chart-2"
        size={24}
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 8,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 8,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#9cc5a1",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "minHeight": 40,
            "paddingBottom": 0,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 0,
          },
        ]
      }
    >
      <Icon
        color="#9cc5a1"
        name="search"
        size={18}
      />
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        onChangeText={[Function]}
        placeholder="Buscar tarefas..."
        placeholderTextColor="#9cc5a1"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "color": "#1f2421",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 14,
              "fontWeight": "400",
              "paddingBottom": 0,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 0,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
  <View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "marginTop": 10,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#9cc5a1",
              "borderWidth": 1,
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
              "minHeight": 40,
            },
          ]
        }
      >
        <TextInput
          allowFontScaling={true}
          autoCapitalize="sentences"
          autoCorrect={false}
          editable={true}
          maxLength={50}
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="O que você vai fazer hoje?"
          placeholderTextColor="#9cc5a1"
          rejectResponderTermination={true}
          returnKeyType="done"
          style={
            Array [
              Object {
                "color": "#1f2421",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 14,
                "fontWeight": "400",
                "minHeight": 40,
                "paddingLeft": 10,
              },
            ]
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#49a078",
            "justifyContent": "center",
            "minHeight": 40,
            "opacity": 1,
            "width": 50,
          }
        }
      >
        <Icon
          color="#1f2421"
          name="plus"
          size={22}
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 8,
            "paddingBottom": 0,
            "paddingLeft": 5,
            "paddingRight": 5,
            "paddingTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1f2421",
              "fontSize": 12,
              "marginRight": 8,
            },
          ]
        }
      >
        Prioridade:
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#9cc5a1",
            "borderColor": "#9cc5a1",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginRight": 5,
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="priority-button-none"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontSize": 10,
                "fontWeight": "700",
              },
            ]
          }
        >
          Nenhuma
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#dce1de",
            "borderColor": "#4a90e2",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginRight": 5,
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="priority-button-low"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#4a90e2",
                "fontSize": 10,
                "fontWeight": "700",
              },
            ]
          }
        >
          Baixa
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#dce1de",
            "borderColor": "#f5a623",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginRight": 5,
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="priority-button-medium"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#f5a623",
                "fontSize": 10,
                "fontWeight": "700",
              },
            ]
          }
        >
          Média
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#dce1de",
            "borderColor": "#FF0000",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginRight": 5,
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="priority-button-high"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FF0000",
                "fontSize": 10,
                "fontWeight": "700",
              },
            ]
          }
        >
          Alta
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 8,
            "paddingBottom": 0,
            "paddingLeft": 5,
            "paddingRight": 5,
            "paddingTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1f2421",
              "fontSize": 12,
              "marginRight": 8,
            },
          ]
        }
      >
        Categoria:
      </Text>
      <RCTScrollView
        horizontal={true}
        showsHorizontalScrollIndicator={false}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#49a078",
                "borderColor": "#49a078",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 1,
                "marginRight": 5,
                "opacity": 1,
                "paddingBottom": 5,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 5,
              }
            }
            testID="category-button-none"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Geral
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#dce1de",
                "borderColor": "#49a078",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 1,
                "marginRight": 5,
                "opacity": 1,
                "paddingBottom": 5,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 5,
              }
            }
            testID="category-button-work"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#49a078",
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Trabalho
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#dce1de",
                "borderColor": "#49a078",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 1,
                "marginRight": 5,
                "opacity": 1,
                "paddingBottom": 5,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 5,
              }
            }
            testID="category-button-personal"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#49a078",
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Pessoal
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#dce1de",
                "borderColor": "#49a078",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 1,
                "marginRight": 5,
                "opacity": 1,
                "paddingBottom": 5,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 5,
              }
            }
            testID="category-button-shopping"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#49a078",
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Compras
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#dce1de",
                "borderColor": "#49a078",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 1,
                "marginRight": 5,
                "opacity": 1,
                "paddingBottom": 5,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 5,
              }
            }
            testID="category-button-health"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#49a078",
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Saúde
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#dce1de",
                "borderColor": "#49a078",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 1,
                "marginRight": 5,
                "opacity": 1,
                "paddingBottom": 5,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 5,
              }
            }
            testID="category-button-study"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#49a078",
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Estudo
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 8,
            "paddingBottom": 0,
            "paddingLeft": 5,
            "paddingRight": 5,
            "paddingTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1f2421",
              "fontSize": 12,
              "marginRight": 8,
            },
          ]
        }
      >
        Repetir:
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#216869",
            "borderColor": "#216869",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginRight": 5,
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="repeat-button-none"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontSize": 10,
                "fontWeight": "700",
              },
            ]
          }
        >
          Não repetir
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#dce1de",
            "borderColor": "#216869",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginRight": 5,
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="repeat-button-daily"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#216869",
                "fontSize": 10,
                "fontWeight": "700",
              },
            ]
          }
        >
          Diário
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#dce1de",
            "borderColor": "#216869",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginRight": 5,
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="repeat-button-weekly"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#216869",
                "fontSize": 10,
                "fontWeight": "700",
              },
            ]
          }
        >
          Semanal
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#dce1de",
            "borderColor": "#216869",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginRight": 5,
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="repeat-button-monthly"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#216869",
                "fontSize": 10,
                "fontWeight": "700",
              },
            ]
          }
        >
          Mensal
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 8,
            "paddingBottom": 0,
            "paddingLeft": 5,
            "paddingRight": 5,
            "paddingTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1f2421",
              "fontSize": 12,
              "marginRight": 8,
            },
          ]
        }
      >
        Prazo:
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#dce1de",
            "borderColor": "#9cc5a1",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "flexDirection": "row",
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="deadline-button"
      >
        <Icon
          color="#9cc5a1"
          name="plus"
          size={14}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#9cc5a1",
                "fontSize": 10,
                "fontWeight": "700",
                "marginLeft": 5,
              },
            ]
          }
        >
          Definir data
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 5,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 15,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1f2421",
              "fontSize": 14,
              "fontWeight": "700",
            },
          ]
        }
      >
        Tarefas
      </Text>
      <Text
        style={
          Array [
            Object {
              "backgroundColor": "#9cc5a1",
              "borderRadius": 10,
              "color": "#ffffff",
              "fontSize": 12,
              "fontWeight": "700",
              "marginLeft": 8,
              "overflow": "hidden",
              "paddingBottom": 2,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 2,
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1f2421",
              "fontSize": 14,
              "fontWeight": "700",
            },
          ]
        }
      >
        Concluídas
      </Text>
      <Text
        style={
          Array [
            Object {
              "backgroundColor": "#9cc5a1",
              "borderRadius": 10,
              "color": "#ffffff",
              "fontSize": 12,
              "fontWeight": "700",
              "marginLeft": 8,
              "overflow": "hidden",
              "paddingBottom": 2,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 2,
            },
          ]
        }
      >
        0
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "marginBottom": 8,
          "paddingBottom": 0,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 0,
          "width": "100%",
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#9cc5a1",
          "borderRadius": 5,
          "flexDirection": "row",
          "marginLeft": 5,
          "opacity": 1,
          "paddingBottom": 5,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 5,
        }
      }
      testID="sort-button-default"
    >
      <Icon
        color="#ffffff"
        name="list"
        size={14}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontSize": 12,
              "fontWeight": "700",
              "marginLeft": 5,
            },
          ]
        }
      >
        Padrão
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 5,
          "flexDirection": "row",
          "marginLeft": 5,
          "opacity": 1,
          "paddingBottom": 5,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 5,
        }
      }
      testID="sort-button-date-desc"
    >
      <Icon
        color="#1f2421"
        name="calendar"
        size={14}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#1f2421",
              "fontSize": 12,
              "fontWeight": "400",
              "marginLeft": 5,
            },
          ]
        }
      >
        Novas
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 5,
          "flexDirection": "row",
          "marginLeft": 5,
          "opacity": 1,
          "paddingBottom": 5,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 5,
        }
      }
      testID="sort-button-alphabetical"
    >
      <Icon
        color="#1f2421"
        name="type"
        size={14}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#1f2421",
              "fontSize": 12,
              "fontWeight": "400",
              "marginLeft": 5,
            },
          ]
        }
      >
        A-Z
      </Text>
    </View>
  </View>
  <RCTScrollView
    ListEmptyComponent={<EmptyState />}
    data={
      Array [
        Object {
          "createdAt": "2023-01-01T10:00:00Z",
          "done": false,
          "id": "1",
          "task": "Test Task",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={true}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "width": "100%",
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={5}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          onSwipeableLeftOpen={[Function]}
          renderLeftActions={[Function]}
          renderRightActions={[Function]}
        >
          <View
            done={false}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(33, 104, 105, 1)",
                "flexDirection": "row",
                "justifyContent": "center",
                "marginBottom": 5,
                "minHeight": 50,
                "paddingBottom": 5,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 5,
                "width": "100%",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#9cc5a1",
                    "borderRadius": 2,
                    "height": 20,
                    "marginRight": 8,
                    "width": 2,
                  },
                ]
              }
            />
            <Text
              done={false}
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontSize": 14,
                    "fontWeight": "400",
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Test Task
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Home Page should show loading indicator initially 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#dce1de",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingBottom": 5,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 5,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#49a078",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 60,
          "paddingTop": 0,
          "position": "relative",
          "width": "100%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontSize": 24,
            "fontWeight": "700",
          },
        ]
      }
    >
      doIt
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "bottom": 10,
          "opacity": 1,
          "position": "absolute",
          "right": 10,
        }
      }
      testID="header-stats-button"
    >
      <Icon
        color="#fff"
        name="bar-chart-2"
        size={24}
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 8,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 8,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#9cc5a1",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "minHeight": 40,
            "paddingBottom": 0,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 0,
          },
        ]
      }
    >
      <Icon
        color="#9cc5a1"
        name="search"
        size={18}
      />
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        onChangeText={[Function]}
        placeholder="Buscar tarefas..."
        placeholderTextColor="#9cc5a1"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "color": "#1f2421",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 14,
              "fontWeight": "400",
              "paddingBottom": 0,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 0,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
  <View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "marginTop": 10,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#9cc5a1",
              "borderWidth": 1,
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
              "minHeight": 40,
            },
          ]
        }
      >
        <TextInput
          allowFontScaling={true}
          autoCapitalize="sentences"
          autoCorrect={false}
          editable={false}
          maxLength={50}
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="O que você vai fazer hoje?"
          placeholderTextColor="#9cc5a1"
          rejectResponderTermination={true}
          returnKeyType="done"
          style={
            Array [
              Object {
                "color": "#1f2421",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 14,
                "fontWeight": "400",
                "minHeight": 40,
                "paddingLeft": 10,
              },
            ]
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#49a078",
            "justifyContent": "center",
            "minHeight": 40,
            "opacity": 1,
            "width": 50,
          }
        }
      >
        <Icon
          color="#1f2421"
          name="plus"
          size={22}
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 8,
            "paddingBottom": 0,
            "paddingLeft": 5,
            "paddingRight": 5,
            "paddingTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1f2421",
              "fontSize": 12,
              "marginRight": 8,
            },
          ]
        }
      >
        Prioridade:
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#9cc5a1",
            "borderColor": "#9cc5a1",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginRight": 5,
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="priority-button-none"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontSize": 10,
                "fontWeight": "700",
              },
            ]
          }
        >
          Nenhuma
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#dce1de",
            "borderColor": "#4a90e2",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginRight": 5,
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="priority-button-low"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#4a90e2",
                "fontSize": 10,
                "fontWeight": "700",
              },
            ]
          }
        >
          Baixa
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#dce1de",
            "borderColor": "#f5a623",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginRight": 5,
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="priority-button-medium"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#f5a623",
                "fontSize": 10,
                "fontWeight": "700",
              },
            ]
          }
        >
          Média
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#dce1de",
            "borderColor": "#FF0000",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginRight": 5,
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="priority-button-high"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FF0000",
                "fontSize": 10,
                "fontWeight": "700",
              },
            ]
          }
        >
          Alta
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 8,
            "paddingBottom": 0,
            "paddingLeft": 5,
            "paddingRight": 5,
            "paddingTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1f2421",
              "fontSize": 12,
              "marginRight": 8,
            },
          ]
        }
      >
        Categoria:
      </Text>
      <RCTScrollView
        horizontal={true}
        showsHorizontalScrollIndicator={false}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#49a078",
                "borderColor": "#49a078",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 1,
                "marginRight": 5,
                "opacity": 1,
                "paddingBottom": 5,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 5,
              }
            }
            testID="category-button-none"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Geral
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#dce1de",
                "borderColor": "#49a078",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 1,
                "marginRight": 5,
                "opacity": 1,
                "paddingBottom": 5,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 5,
              }
            }
            testID="category-button-work"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#49a078",
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Trabalho
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#dce1de",
                "borderColor": "#49a078",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 1,
                "marginRight": 5,
                "opacity": 1,
                "paddingBottom": 5,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 5,
              }
            }
            testID="category-button-personal"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#49a078",
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Pessoal
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#dce1de",
                "borderColor": "#49a078",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 1,
                "marginRight": 5,
                "opacity": 1,
                "paddingBottom": 5,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 5,
              }
            }
            testID="category-button-shopping"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#49a078",
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Compras
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#dce1de",
                "borderColor": "#49a078",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 1,
                "marginRight": 5,
                "opacity": 1,
                "paddingBottom": 5,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 5,
              }
            }
            testID="category-button-health"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#49a078",
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Saúde
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#dce1de",
                "borderColor": "#49a078",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 1,
                "marginRight": 5,
                "opacity": 1,
                "paddingBottom": 5,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 5,
              }
            }
            testID="category-button-study"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#49a078",
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Estudo
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 8,
            "paddingBottom": 0,
            "paddingLeft": 5,
            "paddingRight": 5,
            "paddingTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1f2421",
              "fontSize": 12,
              "marginRight": 8,
            },
          ]
        }
      >
        Repetir:
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#216869",
            "borderColor": "#216869",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginRight": 5,
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="repeat-button-none"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontSize": 10,
                "fontWeight": "700",
              },
            ]
          }
        >
          Não repetir
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#dce1de",
            "borderColor": "#216869",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginRight": 5,
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="repeat-button-daily"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#216869",
                "fontSize": 10,
                "fontWeight": "700",
              },
            ]
          }
        >
          Diário
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#dce1de",
            "borderColor": "#216869",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginRight": 5,
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="repeat-button-weekly"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#216869",
                "fontSize": 10,
                "fontWeight": "700",
              },
            ]
          }
        >
          Semanal
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#dce1de",
            "borderColor": "#216869",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginRight": 5,
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="repeat-button-monthly"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#216869",
                "fontSize": 10,
                "fontWeight": "700",
              },
            ]
          }
        >
          Mensal
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 8,
            "paddingBottom": 0,
            "paddingLeft": 5,
            "paddingRight": 5,
            "paddingTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1f2421",
              "fontSize": 12,
              "marginRight": 8,
            },
          ]
        }
      >
        Prazo:
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#dce1de",
            "borderColor": "#9cc5a1",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "flexDirection": "row",
            "opacity": 1,
            "paddingBottom": 5,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 5,
          }
        }
        testID="deadline-button"
      >
        <Icon
          color="#9cc5a1"
          name="plus"
          size={14}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#9cc5a1",
                "fontSize": 10,
                "fontWeight": "700",
                "marginLeft": 5,
              },
            ]
          }
        >
          Definir data
        </Text>
      </View>
    </View>
  </View>
  <ActivityIndicator
    animating={true}
    color="#49a078"
    hidesWhenStopped={true}
    size="large"
    style={
      Array [
        Object {
          "marginTop": 15,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 5,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 15,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1f2421",
              "fontSize": 14,
              "fontWeight": "700",
            },
          ]
        }
      >
        Tarefas
      </Text>
      <Text
        style={
          Array [
            Object {
              "backgroundColor": "#9cc5a1",
              "borderRadius": 10,
              "color": "#ffffff",
              "fontSize": 12,
              "fontWeight": "700",
              "marginLeft": 8,
              "overflow": "hidden",
              "paddingBottom": 2,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 2,
            },
          ]
        }
      >
        0
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1f2421",
              "fontSize": 14,
              "fontWeight": "700",
            },
          ]
        }
      >
        Concluídas
      </Text>
      <Text
        style={
          Array [
            Object {
              "backgroundColor": "#9cc5a1",
              "borderRadius": 10,
              "color": "#ffffff",
              "fontSize": 12,
              "fontWeight": "700",
              "marginLeft": 8,
              "overflow": "hidden",
              "paddingBottom": 2,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 2,
            },
          ]
        }
      >
        0
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "marginBottom": 8,
          "paddingBottom": 0,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 0,
          "width": "100%",
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#9cc5a1",
          "borderRadius": 5,
          "flexDirection": "row",
          "marginLeft": 5,
          "opacity": 1,
          "paddingBottom": 5,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 5,
        }
      }
      testID="sort-button-default"
    >
      <Icon
        color="#ffffff"
        name="list"
        size={14}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontSize": 12,
              "fontWeight": "700",
              "marginLeft": 5,
            },
          ]
        }
      >
        Padrão
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 5,
          "flexDirection": "row",
          "marginLeft": 5,
          "opacity": 1,
          "paddingBottom": 5,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 5,
        }
      }
      testID="sort-button-date-desc"
    >
      <Icon
        color="#1f2421"
        name="calendar"
        size={14}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#1f2421",
              "fontSize": 12,
              "fontWeight": "400",
              "marginLeft": 5,
            },
          ]
        }
      >
        Novas
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 5,
          "flexDirection": "row",
          "marginLeft": 5,
          "opacity": 1,
          "paddingBottom": 5,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 5,
        }
      }
      testID="sort-button-alphabetical"
    >
      <Icon
        color="#1f2421"
        name="type"
        size={14}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#1f2421",
              "fontSize": 12,
              "fontWeight": "400",
              "marginLeft": 5,
            },
          ]
        }
      >
        A-Z
      </Text>
    </View>
  </View>
  <RCTScrollView
    ListEmptyComponent={<EmptyState />}
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={true}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "width": "100%",
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={5}
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "marginTop": 50,
            },
          ]
        }
      >
        <Icon
          color="#9cc5a1"
          name="clipboard"
          size={50}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#9cc5a1",
                "fontSize": 16,
                "fontWeight": "400",
                "marginTop": 10,
                "textAlign": "center",
              },
            ]
          }
        >
          Você ainda não tem tarefas cadastradas.
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
